--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   <body>
 
     <div class="title">
-      TRADE STORM
+      <i class='bx bxs-bolt'></i> TRADE STORM
     </div>
 
     <div class="center_col">
-      
+
     </div>
 
     <script src="./js/getSheet.js" charset="utf-8"></script>
