--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
 
     <div class="title">
-      <i class='bx bxs-bolt'></i> TRADE STORM
+      <i class='bx bxs-bolt'></i> TRADE STORM <a id="edit" target="_blank" href="https://docs.google.com/spreadsheets/d/13OKP_hxz97LrO0bLyI_WiyL-JDHDkDZ5tP0vHAdpq5k/edit?usp=sharing"><i class='bx bx-file'></i></a>
     </div>
 
     <div class="center_col">
