--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <title>Trade Storm</title>
     <link rel="stylesheet" href="./css/master.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=0">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=0">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/logo.png">
+
+    <!-- Manifest -->
+    <link rel="manifest" href="manifest.json">
+
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="Trade Storm">
+    <meta name="apple-mobile-web-app-title" content="Trade Storm">
+    <meta name="theme-color" content="#01005e">
+    <meta name="msapplication-navbutton-color" content="#01005e">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="icon" href="./assets/logo.png">
+    <link rel="apple-touch-icon" href="./assets/logo.png">
 
     <!-- Fonts -->
     <link href='https://unpkg.com/boxicons@1.7.1/css/boxicons.min.css' rel='stylesheet'>
